# supplyiq

./: Makefile  README.md  pyproject.toml  requirements.txt
deployment/docker/: Dockerfile  Dockerfile.ui  docker-compose.yml
deployment/k8s/: api-ollama-ui-deployment.yaml  secrets.example.yaml
docs/adr/: ADR-001-ortools-across-domains.md  ADR-002-sized-heuristic-fallback.md  ADR-003-closed-form-inventory-theory.md  ADR-004-copilot-translation-only.md
docs/diagrams/: architecture.md
scripts/: setup.sh
src/api/: dependencies.py  main.py
src/api/middleware/: audit.py  rate_limit.py
src/api/routes/: copilot.py  health.py  network.py  replenishment.py  routing.py
src/config/: settings.py
src/domain/: constants.py  copilot_schemas.py  exceptions.py  network_schemas.py  replenishment_schemas.py  routing_schemas.py
src/observability/: logging.py  metrics.py
src/services/copilot/: copilot_service.py  modification_applier.py  orchestrator.py
src/services/network/: greedy_allocator.py  network_solver.py
src/services/replenishment/: replenishment_solver.py
src/services/routing/: heuristic_router.py  vrp_solver.py
src/services/storage/: sqlite_service.py
src/ui/: app.py
tests/: conftest.py
tests/e2e/: test_copilot_journey.py
tests/integration/: test_api_routes.py  test_copilot_orchestrator_integration.py
tests/unit/: test_copilot_service.py  test_domain_schemas.py  test_greedy_allocator.py  test_heuristic_router.py  test_modification_applier.py  test_replenishment_budget_lp.py  test_replenishment_solver.py  test_storage_service.py
